--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,10 @@
             <h2>Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <img src="proj1.jpg" alt="Project 1 Thumbnail">
-                    <h3>Project Name 1</h3>
-                    <p>A simple AI web scraper built in python.</p>
-                    <a href="project1.html">View Project</a>
+                    <img src="proj1banner.png" alt="Project 1 Thumbnail">
+                    <h3>Memory Game using Arduino</h3>
+                    <p>A simple memory game created using Arduino <br> and basic electrical components like LEDs, Buttons, Buzzer etc.</p>
+                    <a href="https://github.com/sudo-charg3/memory-game-arduino">View Project</a>
                 </div>
                 <div class="project">
                     <img src="proj1.jpg" alt="Project 2 Thumbnail">
